--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,15 @@
             "styles": [
               "src/styles.less"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/fullpage.js/dist/fullpage.min.js",
+              "node_modules/fullpage.js/dist/fullpage.extensions.min.js",
+              "node_modules/fullpage.js/vendors/easings.min.js",
+              "node_modules/fullpage.js/vendors/scrolloverflow.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "@fullpage/angular-fullpage"
+           ]
           },
           "configurations": {
             "production": {
