--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
             ],
             "allowedCommonJsDependencies": [
               "@fullpage/angular-fullpage"
-           ]
+            ]
           },
           "configurations": {
             "production": {
@@ -129,8 +129,17 @@
               "devServerTarget": "me:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@netlify-builder/deploy:deploy",
+          "options": {
+            "outputPath": "dist/me",
+            "netlifyToken": "lKno7hOh6bsHHGD9KU2ViIZDgvufUoEU1G-mIIwyLzM",
+            "siteId": "0e463706-51d1-4552-bfce-9314c7047584"
+          }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "me"
 }
